implement specs based migration rules for starting process instances